# predictor

./: MyInstrumentPredictor.ipynb  pyproject.toml
.ipynb_checkpoints/: MyInstrumentPredictor-checkpoint.ipynb
tests/: test_predictor.py
