[tool.poetry]
name = "predictor"
version = "0.1.0"
description = ""
authors = ["Agustin Calcagno <agustin@savioke.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.1.7"
voila = "^0.2.10"
fastbook = "^0.0.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
